2009-07-24  Jesse Jones  <jesjones@mindspring.com>

	* MissingExceptionConstructorsRule.cs: Rewrote the description.

2009-07-03  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-03-15  Jesse Jones  <jesjones@mindspring.com> 

	* UseObjectDisposedExceptionRule.cs, Makefile.am: Added new rule.

2009-01-10  Jesse Jones  <jesjones@mindspring.com> 

	* DoNotThrowInUnexpectedLocationRule.cs: Fixed an assert which
	broke when the code was switched from Mono.Cecil.Cil.Code.ToString
	to Mono.Cecil.Cil.OpCode.Name.

2008-12-30  Jesse Jones  <jesjones@mindspring.com> 

	* DoNotThrowInUnexpectedLocationRule.cs: Added.

2008-12-30  Sebastien Pouliot  <sebastien@ximian.com>

	* InstantiateArgumentExceptionCorrectlyRule.cs: Make sure the 
	strings are always compared ordinally - to remove any culture 
	specific differences on metadata item names.

2008-12-14  Sebastien Pouliot  <sebastien@ximian.com>

	* DontSwallowErrorsCatchingNonspecificExceptionsRule.cs: Patch 
	received from Gonzalo that fix #458173. No test case yet (for unit
	tests).

2008-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidThrowingBasicExceptionsRule.cs: CSC dislike (CS1570) mixing //
	comment, on a new line, inside a block of /// 

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidArgumentExceptionDefaultConstructorRule.cs: Use HasParameters
	* InstantiateArgumentExceptionCorrectlyRule.cs: Use HasParameters
	* MissingExceptionConstructorsRule.cs: Use HasParameters

2008-11-18  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidArgumentExceptionDefaultConstructorRule.cs: Specify 
	StringComparison.Ordinal when calling EndsWith.

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* SEHHandlerType.cs: Clearly specify [Serializable] on enum (self-test)

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Exceptions.mdp:
	* Gendarme.Rules.Exceptions.csproj: Activate makefile integration for