@@ -1,3 +1,10 @@
+2010-01-04  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* InstantiateArgumentExceptionCorrectlyRule.cs: Fix bug #567995
+	for indexers. Also reduce to Severity.Low (won't be shown by
+	default) the usage of "value" in properties (since it's somewhat
+	popular even if unhelpful as a name).
+
 2009-07-24  Jesse Jones  <jesjones@mindspring.com>
 
 	* MissingExceptionConstructorsRule.cs: Rewrote the description.
